fix double underline, remove ugly text borders (no clipping but whatever)

--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -19,12 +19,8 @@
 
 .name {
   animation: appear 1s var(--ease-in-out-quint);
-  @apply --underlined-double;
   color: white;
-
-  @media (--mobile) {
-    @apply --underlined;
-  }
+  @apply --underlined-double;
 }
 
 .subtitle {
