--- a/src/layouts/variables.css
+++ b/src/layouts/variables.css
@@ -16,19 +16,30 @@
   --black: #121417;
   --red: #F67979;
   --yellow: #FFF17C;
-
-  --underlined: {
-    box-shadow: inset 0 -1px 0 var(--black), inset 0 -2px 0 #fff;
-  };
+  --grey-1: #79868E;
 
   --underlined-double: {
-    box-shadow: inset 0 0px 0 var(--black), inset 0 -1px 0 #fff, inset 0 -2px 0 var(--black), inset 0 -3px 0 #fff;
+    position: relative;
+
+    &:before,
+    &:after {
+      position: absolute;
+      content: "";
+      width: 100%;
+      top: calc(100% - 0.15em);
+      left: 0;
+      border-bottom: 1px solid white;
+    }
+
+    &:after {
+      margin-top: 2px;
+    }
   }
 
   --ease-in-out-expo: cubic-bezier(1.000, 0.000, 0.000, 1.000);
   --ease-in-out-quint: cubic-bezier(0.860, 0.000, 0.070, 1.000);
   --ease-in-out-quart: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  --ease-in-sine: cubic-bezier(0.470, 0.000, 0.745, 0.715);
+  --ease-out-quad: cubic-bezier(0.250, 0.460, 0.450, 0.940);
 
   --z-index-transition: 10;
   --z-index-header: 9;
